syntax = "proto3";

package presence;

option go_package = "github.com/justjack1521/mevium/pkg/genproto/protop";

message FollowPlayerRequest {
  string player_id = 1;
}

message UpdatePlayerPresenceRequest {
  uint64 online = 2;
}

message UpdatePlayerPositionRequest {
  string region_map = 2;
  int32 region_map_node = 3;
}

message UpdatePlayerCompanionRequest {
  string companion_id = 2;
}

message UpdatePlayerCommentRequest {
  string comment = 2;
}

message UpdateRentalCardRequest {
  string rental_card = 1;
}

message PlayerSearchRequest {
  string user_id = 1;
}

message UnfollowPlayerRequest {
  string player_id = 1;
}